--- a/pom.xml
+++ b/pom.xml
@@ -18,17 +18,37 @@
   </properties>
 
   <dependencies>
-    <dependency>
-      <groupId>junit</groupId>
-      <artifactId>junit</artifactId>
-      <version>4.11</version>
-      <scope>test</scope>
-    </dependency>
-<dependency>
-    <groupId>com.pi4j</groupId>
-    <artifactId>pi4j-core</artifactId>
-   <version>1.1</version>
-</dependency>
+	<dependency>
+		<groupId>junit</groupId>
+		<artifactId>junit</artifactId>
+		<version>4.11</version>
+		<scope>test</scope>
+	</dependency>
+	<dependency>
+	    	<groupId>com.pi4j</groupId>
+	    	<artifactId>pi4j-core</artifactId>
+	   	<version>1.1</version>
+	</dependency>
+	<dependency>
+	    	<groupId>io.javalin</groupId>
+	    	<artifactId>javalin</artifactId>
+	    	<version>3.9.1</version>
+	</dependency>
+	<dependency>
+	    <groupId>org.slf4j</groupId>
+	    <artifactId>slf4j-api</artifactId>
+	    <version>1.8.0-beta4</version>
+	</dependency>
+	<dependency>
+	    <groupId>org.slf4j</groupId>
+	    <artifactId>slf4j-simple</artifactId>
+	    <version>1.8.0-beta4</version>
+	</dependency>
+	<dependency>
+	    <groupId>com.fasterxml.jackson.core</groupId>
+	    <artifactId>jackson-databind</artifactId>
+	    <version>2.10.3</version>
+	</dependency>
   </dependencies>
 
   <build>
@@ -87,5 +107,12 @@
         </plugin>
       </plugins>
     </pluginManagement>
+	<resources>
+        <resource>
+            <directory>${basedir}/static</directory>
+            <targetPath>${basedir}/target/static</targetPath>
+            <filtering>false</filtering>
+        </resource>
+    </resources>  
   </build>
 </project>
